# Computer_technology

Homework/Task1/: CMakeLists.txt  ex1.cpp  test
